--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <script>
         if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('/sw.js')
+                navigator.serviceWorker.register('./sw.js')
                     .then((reg) => {
                         console.log('Service worker enregistré avec succès', reg);
                     })
@@ -239,4 +239,5 @@ async function loadAllBeers() {
 
     </script>
 </body>
+
 </html>
